@@ -1,3 +1,8 @@
+2015-03-20  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/65072
+	* g++.dg/cpp0x/pr65072.C: New test.
+
 2015-03-20  Richard Biener  <rguenther@suse.de>
 
 	PR middle-end/64715
