@@ -1,3 +1,9 @@
+2015-03-20  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/65072
+	* typeck.c (lookup_anon_field): Make sure we're dealing with the main
+	variant.
+
 2015-03-19  Jason Merrill  <jason@redhat.com>
 
 	PR c++/65046
